tests/ui/attributes/cold-attribute-application-54044.stderr
error: the `cold` attribute cannot be used on structs
  --> $DIR/cold-attribute-application-54044.rs:4:3
   |
LL | #[cold]
   |   ^^^^
   |
   = help: the `cold` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/cold-attribute-application-54044.rs:2:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: the `cold` attribute cannot be used on expressions
  --> $DIR/cold-attribute-application-54044.rs:10:7
   |
LL |     #[cold]
   |       ^^^^
   |
   = help: the `cold` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 2 previous errors

